[gd_scene load_steps=2 format=3 uid="uid://k9s1t5v8w0x2z"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "00:00"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level: 1"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
value = 0.0
show_percentage = false
